[gd_scene load_steps=2 format=3 uid="uid://uhmxpabnq061"]

[ext_resource type="Script" uid="uid://dslltoyi0h7jt" path="res://addons/dreadpon.spatial_gardener/scene_converter/convert_dialog.gd" id="1"]

[node name="ConvertDialog" type="ConfirmationDialog"]
position = Vector2i(0, 36)
size = Vector2i(500, 300)
visible = true
ok_button_text = "Convert"
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 8.0
offset_top = 8.0
offset_right = 492.0
offset_bottom = 251.0

[node name="LabelInfo" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "The following outdated Node3D Gardener scenes were found:"

[node name="TreeScenes" type="Tree" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
hide_root = true

[node name="LabelPrompt" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Would you like to convert them to the current version?
(results wll be in the console/output)"

[node name="ButtonBackup" type="CheckBox" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Create backup duplicates"

[node name="ButtonDontAskAgain" type="CheckBox" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Don't ask me again"

[connection signal="about_to_popup" from="." to="." method="_on_ConvertDialog_about_to_show"]
[connection signal="canceled" from="." to="." method="_on_ButtonCancel_pressed"]
[connection signal="confirmed" from="." to="." method="_on_ButtonConfirm_pressed"]
[connection signal="toggled" from="VBoxContainer/ButtonDontAskAgain" to="." method="_on_ButtonDontAskAgain_toggled"]
